--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,15 @@ Metrics/BlockLength:
   Exclude:
     - Guardfile
 
+Metrics/MethodLength:
+  Max: 11
+
+Rails/BulkChangeTable:
+  Enabled: false
+
+RSpec/ExampleLength:
+  Max: 6
+
 RSpec/MultipleExpectations:
   Max: 4
 
