--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,9 @@ jobs:
 
       - name: Set Tag
         id: tag
-        run: |
-          echo "tag=$(git rev-parse "$GITHUB_SHA")" >> $GITHUB_OUTPUT
+        run: echo "tag=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_OUTPUT
 
-      - name: Build image
+      - name: Build and Push image
         uses: docker/build-push-action@v5
         with:
           context: .
