--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
           tags: b1anca/yahtapp:${{ steps.tag.outputs.DOCKER_TAG }},b1anca/yahtapp:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          labels: service=yahtapp
 
       - uses: webfactory/ssh-agent@v0.7.0
         with:
